--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 6- Paana</title>
+<title>Contribuer 5- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -621,7 +621,7 @@ document.addEventListener('click', (e) => {
   const selectedKeywords = Array.from(document.querySelectorAll('input[name="keywords"]:checked')).map(cb => cb.value);
 
   const filtersActive = {
-    categories: selectedCats.length > 0,
+    categories: false,
     themes: selectedThemes.length > 0,
     keywords: selectedKeywords.length > 0
   };
