--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 5- Paana</title>
+<title>Contribuer 4- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -664,8 +664,9 @@ document.addEventListener('click', (e) => {
       }
     });
   }
-
+if (!filtersActive.categories) {
   updateOptionStyles("categories", activeCats);
+}
   updateOptionStyles("themes", activeThemes);
   updateOptionStyles("keywords", activeKeywords);
         
