--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 2 - Paana</title>
+<title>Contribuer 1 - Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -667,8 +667,8 @@ document.addEventListener('click', (e) => {
     });
   }
 
-  updateOptionStyles("themes", activeThemes);
-  updateOptionStyles("keywords", activeKeywords);
+  // updateOptionStyles("themes", activeThemes);
+ // updateOptionStyles("keywords", activeKeywords);
   // ⛔ PAS de grisé sur les catégories
 
   // Affichage des événements filtrés
