--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 1 - Paana</title>
+<title>Contribuer 2 - Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -615,7 +615,7 @@ document.addEventListener('click', (e) => {
     }
   });
 }); 
-   function applyFilters() {
+function applyFilters() {
   const selectedCats = Array.from(document.querySelectorAll('input[name="categories"]:checked')).map(cb => cb.value);
   const selectedThemes = Array.from(document.querySelectorAll('input[name="themes"]:checked')).map(cb => cb.value);
   const selectedKeywords = Array.from(document.querySelectorAll('input[name="keywords"]:checked')).map(cb => cb.value);
@@ -628,7 +628,6 @@ document.addEventListener('click', (e) => {
 
   const year = parseInt(document.querySelector(".year-btn.active")?.dataset.year || 0);
 
-  // Événements à afficher (intersection des filtres cochés)
   const visibleEvents = window.eventData.filter(e => {
     const catMatch = !filtersActive.categories || selectedCats.some(cat => [e.maincat, ...(e.subcats || [])].includes(cat));
     const themeMatch = !filtersActive.themes || selectedThemes.includes(e.themes);
@@ -636,7 +635,7 @@ document.addEventListener('click', (e) => {
     return e.start <= year && e.end >= year && catMatch && themeMatch && keywordMatch;
   });
 
-  // === GRISER ce qui ne correspond pas ===
+  // === ÉVÉNEMENTS FILTRÉS POUR GRISER ===
   const matchedEvents = window.eventData.filter(e => {
     const catMatch = !filtersActive.categories || selectedCats.some(cat => [e.maincat, ...(e.subcats || [])].includes(cat));
     const themeMatch = !filtersActive.themes || selectedThemes.includes(e.themes);
@@ -655,11 +654,10 @@ document.addEventListener('click', (e) => {
     (e.keywords || []).forEach(k => activeKeywords.add(k));
   });
 
-  // ✅ Griser seulement thèmes et mots-clés
   function updateOptionStyles(name, activeSet) {
     document.querySelectorAll(`input[name="${name}"]`).forEach(input => {
       const label = input.parentElement;
-      if (activeSet.has(input.value) || input.checked) {
+      if (input.checked || activeSet.has(input.value)) {
         label.classList.remove('disabled');
       } else {
         label.classList.add('disabled');
@@ -667,11 +665,25 @@ document.addEventListener('click', (e) => {
     });
   }
 
-  // updateOptionStyles("themes", activeThemes);
- // updateOptionStyles("keywords", activeKeywords);
-  // ⛔ PAS de grisé sur les catégories
+  // === GRISER UNIQUEMENT LES GROUPES NON ACTIFS ===
+  if (filtersActive.categories) {
+    updateOptionStyles("themes", activeThemes);
+    updateOptionStyles("keywords", activeKeywords);
+  } else if (filtersActive.themes) {
+    updateOptionStyles("categories", activeCats);
+    updateOptionStyles("keywords", activeKeywords);
+  } else if (filtersActive.keywords) {
+    updateOptionStyles("categories", activeCats);
+    updateOptionStyles("themes", activeThemes);
+  } else {
+    // Aucun filtre coché : tout actif
+    ["categories", "themes", "keywords"].forEach(name => {
+      document.querySelectorAll(`input[name="${name}"]`).forEach(input => {
+        input.parentElement.classList.remove("disabled");
+      });
+    });
+  }
 
-  // Affichage des événements filtrés
   renderFilteredEvents(year, visibleEvents);
 }
 </script>
