--- a/contribuer.html
+++ b/contribuer.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 4 - Paana</title>
+<title>Contribuer 6- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -426,7 +424,7 @@ function renderFilteredEvents(year, filteredData) {
   const contextual = (from, to) => {
     const map = {};
     for (let y = from; y <= to; y++) {
-      const evts = filteredData.filter(e => e.start <= y && e.end >= y);
+      const evts = filteredData.filter(e => inRange(e) && e.start <= y && e.end >= y);
       if (evts.length) map[y] = evts;
     }
     return map;
@@ -616,7 +614,7 @@ document.addEventListener('click', (e) => {
     }
   });
 }); 
-   function applyFilters() {
+    function applyFilters() {
   const selectedCats = Array.from(document.querySelectorAll('input[name="categories"]:checked')).map(cb => cb.value);
   const selectedThemes = Array.from(document.querySelectorAll('input[name="themes"]:checked')).map(cb => cb.value);
   const selectedKeywords = Array.from(document.querySelectorAll('input[name="keywords"]:checked')).map(cb => cb.value);
@@ -629,7 +627,6 @@ document.addEventListener('click', (e) => {
 
   const year = parseInt(document.querySelector(".year-btn.active")?.dataset.year || 0);
 
-  // Événements à afficher (intersection des filtres cochés)
   const visibleEvents = window.eventData.filter(e => {
     const catMatch = !filtersActive.categories || selectedCats.some(cat => [e.maincat, ...(e.subcats || [])].includes(cat));
     const themeMatch = !filtersActive.themes || selectedThemes.includes(e.themes);
@@ -637,7 +634,7 @@ document.addEventListener('click', (e) => {
     return e.start <= year && e.end >= year && catMatch && themeMatch && keywordMatch;
   });
 
-  // === GRISER ce qui ne correspond pas ===
+  // === GRISER les options non associées ===
   const matchedEvents = window.eventData.filter(e => {
     const catMatch = !filtersActive.categories || selectedCats.some(cat => [e.maincat, ...(e.subcats || [])].includes(cat));
     const themeMatch = !filtersActive.themes || selectedThemes.includes(e.themes);
@@ -656,7 +653,6 @@ document.addEventListener('click', (e) => {
     (e.keywords || []).forEach(k => activeKeywords.add(k));
   });
 
-  // ✅ Griser seulement thèmes et mots-clés
   function updateOptionStyles(name, activeSet) {
     document.querySelectorAll(`input[name="${name}"]`).forEach(input => {
       const label = input.parentElement;
@@ -668,11 +664,11 @@ document.addEventListener('click', (e) => {
     });
   }
 
+  updateOptionStyles("categories", activeCats);
   updateOptionStyles("themes", activeThemes);
   updateOptionStyles("keywords", activeKeywords);
-  // ⛔ PAS de grisé sur les catégories
-
-  // Affichage des événements filtrés
+        
+  // === Afficher les événements filtrés ===
   renderFilteredEvents(year, visibleEvents);
 }
 </script>
