--- a/contribuer.html
+++ b/contribuer.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 2- Paana</title>
+<title>Explorer - Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -228,36 +228,6 @@
 </nav>
 </header>
 <main>
-     <div id="filters" style="margin-bottom: 1rem;">
-  <label for="filter-maincat"><strong>Filtrer par catégorie principale :</strong></label>
-  <select id="filter-maincat" style="margin-left: 0.5rem;">
-    <option value="">Toutes les catégories</option>
-    <option value="Contexte">Contexte</option>
-    <option value="Gouvernance en santé publique (stewardship)">Gouvernance en santé publique (stewardship)</option>
-    <option value="Engagement communautaire et participation sociale">Engagement communautaire et participation sociale</option>
-    <option value="Planification, financement et gestion multisectorielle">Planification, financement et gestion multisectorielle</option>
-    <option value="Prévention et détection précoce des maladies">Prévention et détection précoce des maladies</option>
-    <option value="Accès aux produits et technologies de santé">Accès aux produits et technologies de santé</option>
-    <option value="Promotion de la santé">Promotion de la santé</option>
-    <option value="Protection de la santé">Protection de la santé</option>
-    <option value="Qualité et équité des services de santé">Qualité et équité des services de santé</option>
-    <option value="Recherche, évaluation et développement des connaissances">Recherche, évaluation et développement des connaissance</option>
-    <option value="Développement de la main-d’œuvre en santé publique">Développement de la main-d’œuvre en santé publique</option>
-    <option value="Surveillance et suivi de la santé publique">Surveillance et suivi de la santé publique</option>
-    <option value="Gestion des urgences de santé publique">Gestion des urgences de santé publique</option>
-  </select>
-
-           <div style="margin-top: 1rem;">
-    <label><strong>Filtrer par thème(s) :</strong></label>
-    <div id="theme-dropdown" style="display:inline-block; position:relative; margin-left:1rem;">
-      <button type="button" onclick="toggleThemeDropdown()" style="cursor:pointer;">Sélectionner des thèmes ⌄</button>
-      <div id="theme-options" style="display:none; position:absolute; top:100%; left:0; background:#fff; border:1px solid #ccc; max-height:200px; overflow-y:auto; padding:0.5rem; z-index:10;">
-        <!-- les thèmes seront générés ici -->
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="timeline-layout">
 <div class="years-container">
 <button id="scroll-up">↑</button>
@@ -265,7 +235,6 @@
 <button id="scroll-down">↓</button>
 </div>
 <div class="events-column">
- 
 <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
 <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
 <div class="collapsible-box" id="box-superieur">
@@ -302,6 +271,13 @@
       </ul>
   </div>
 </div>
+    <hr style="margin: 3rem 0;" />
+<h2>🔍 Pour une recherche affinée</h2>
+<p>
+  Vous pouvez consulter tous les événements dans un tableau filtrable en visitant la page suivante :
+  <br />
+  <a href="tableau.html" class="btn-tableau" style="display:inline-block; margin-top:1rem; padding:0.8rem 1.5rem; background-color: var(--primary); color:white; border-radius:6px; text-decoration:none;">Accéder au tableau</a>
+</p>
 </main>
 <!-- SCRIPT will be appended below -->
 <script>
@@ -341,9 +317,7 @@ window.addEventListener("DOMContentLoaded", () => {
   function renderEvents(year) {
     const top = document.getElementById("bloc-superieur");
     const center = document.getElementById("events-central-list");
-    const selectedMaincat = document.getElementById("filter-maincat").value;
-    const checkedThemes = [...document.querySelectorAll(".theme-checkbox:checked")].map(cb => cb.value);
-      const bottom = document.getElementById("bloc-inferieur");
+    const bottom = document.getElementById("bloc-inferieur");
     top.innerHTML = center.innerHTML = bottom.innerHTML = "";
 const makeEventText = (e, idx, isContextual = false) => {
   const icon = categoryIcons[e.maincat] ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right:0.4rem;"></i>` : "";
@@ -362,15 +336,11 @@ const makeEventText = (e, idx, isContextual = false) => {
     </div>`;
 };
 
-  window.eventData.forEach((e, idx) => {
- if (
-  e.start <= year && e.end >= year &&
-  (!selectedMaincat || e.maincat === selectedMaincat) &&
-  (checkedThemes.length === 0 || checkedThemes.includes(e.themes))
-)  {
-    center.insertAdjacentHTML("beforeend", makeEventText(e, idx));
-  }
-});
+    window.eventData.forEach((e, idx) => {
+      if (e.start <= year && e.end >= year) {
+        center.insertAdjacentHTML("beforeend", makeEventText(e, idx));
+      }
+    });
 
     const groupByYear = (from, to) => {
       const map = {};
@@ -454,24 +424,7 @@ ${(e.subcats || []).length ? `<p><strong>Catégories secondaires<a href="Les FES
     .then(d => {
       d.sort((a, b) => a.start - b.start);
     window.eventData = d;
-     // Génération dynamique des thèmes
-const themeOptions = document.getElementById("theme-options");
-const uniqueThemes = [...new Set(d.map(e => e.themes).filter(Boolean))].sort();
-
-uniqueThemes.forEach(theme => {
-  const id = "theme-" + theme.replace(/\s+/g, "-");
-  const div = document.createElement("div");
-  div.innerHTML = `<label><input type="checkbox" class="theme-checkbox" value="${theme}"> ${theme}</label>`;
-  themeOptions.appendChild(div);
-});
-
-document.querySelectorAll(".theme-checkbox").forEach(cb => {
-  cb.addEventListener("change", () => {
-    const active = document.querySelector(".year-btn.active");
-    if (active) renderEvents(parseInt(active.dataset.year));
-  });
-});
-        const years = [...new Set(d.flatMap(e => Array.from({length: e.end - e.start + 1}, (_, i) => e.start + i)))].sort((a, b) => a - b);
+      const years = [...new Set(d.flatMap(e => Array.from({length: e.end - e.start + 1}, (_, i) => e.start + i)))].sort((a, b) => a - b);
       years.forEach(year => {
         const btn = document.createElement("button");
         btn.className = "year-btn";
@@ -509,14 +462,7 @@ document.querySelectorAll(".theme-checkbox").forEach(cb => {
   help.style.display = isVisible ? "none" : "block";
   btn.setAttribute("aria-expanded", !isVisible);
 }
-  document.getElementById("filter-maincat").addEventListener("change", () => {
-  const active = document.querySelector(".year-btn.active");
-  if (active) renderEvents(parseInt(active.dataset.year));
-});  
-    function toggleThemeDropdown() {
-  const dropdown = document.getElementById("theme-options");
-  dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-}
+    
 </script>
 </body>
 </html>
