--- a/a-propos.html
+++ b/a-propos.html
@@ -72,7 +72,7 @@
 </div>
   <nav>
     <a href="a-propos.html">A PROPOS</a>
-    <a href="contribuer.html">CONTRIBUER</a>
+    <a href="contribuer.html">EXPLORER</a>
     <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
     <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
       <i class="fas fa-envelope fa-lg"></i>
