--- a/contribuer.html
+++ b/contribuer.html
@@ -222,7 +222,7 @@
 </div>
 <nav>
 <a href="a-propos.html">A PROPOS</a>
-<a href="contribuer.html">CONTRIBUER</a>
+<a href="contribuer.html">EXPLORER</a>
 <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
 <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
 </nav>
