--- a/contribuer.html
+++ b/contribuer.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Explorer - Paana</title>
+<title>Explorer 2- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -221,8 +219,8 @@
 <div class="signature">Emmanuelle RUPP-TERRIS</div>
 </div>
 <nav>
-<a href="a-propos.html">A PROPOS</a>
-<a href="contribuer.html">EXPLORER</a>
+<a href='/a-propos'>A PROPOS</a>
+<a href='/contribuer'>CONTRIBUER</a>
 <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
 <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
 </nav>
