--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <div class="buttons">
       <a href="a-propos.html" class="btn">A PROPOS</a>
-      <a href="contribuer.html" class="btn">EXPLORER</a>
+      <a href="explorer.html" class="btn">EXPLORER</a>
       <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" class="btn" target="_blank">SOUMETTRE</a>
     </div>
     <footer class="footer">
