--- a/a-propos.html
+++ b/a-propos.html
@@ -76,6 +76,8 @@
     <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
     <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
       <i class="fas fa-envelope fa-lg"></i>
+    <a href="index.html" class="btn-retour">
+  <i class="fas fa-house"></i> 
     </a>
   </nav>
 </header>
