--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A propos 2 - Paana</title>
+  <title>A propos 3 - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française">
   <link rel="stylesheet" href="header-footer.css" />
   <style>
@@ -76,7 +76,7 @@
     <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
     <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
       <i class="fas fa-envelope fa-lg"></i>
-    <a href="index.html" class="btn-retour">
+    <a href="index.html" title="Retour à l'accueil">
   <i class="fas fa-house"></i> 
     </a>
   </nav>
